<resources>
    <string name="app_name">ViewAndLayout</string>
    <string name="tv_avtorization">Авторизация</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="accept_agreement">Принимаю соглашение</string>
    <string name="buttonLogin">Войти</string>
    <string name="image_description">Картинка авторизации</string>
    <string name="autorization_accepted">Авторизация успешна</string>
</resources>
